# SAMP-Mobile-Beta

./: README.md  build.gradle  build.gradle.kts  logcat.txt  settings.gradle  settings.gradle.bak  settings.gradle.kts
.github/workflows/: setup.yml  setup.yml.bak
app/: CMakeLists.txt  build.gradle  build.gradle.bak  build.gradle.kts  build.gradle.tx
app/src/main/: AndroidManifest.xml  AndroidManifest.xml.bak
app/src/main/cpp/: Application.mk  CMakeLists.txt  CheckFileHash.cpp  CheckFileHash.h  bkeys.cpp  chatwindow.cpp  customserver.cpp  customserver.h  customserver_koshi.cpp  customserver_koshi.h  keyboard.cpp  main.cpp  native_loader.c  settings.cpp
app/src/main/cpp/game/: CActorPed.cpp.bak  CActorPed.h.bak  splashscreen.cpp
app/src/main/cpp/gui/: gui.cpp
app/src/main/cpp/net/: netgame.cpp
app/src/main/cpp/samp/jni/: CMakeLists.txt  main.cpp  main.h  settings.cpp
app/src/main/cpp/util/: armhook.h
app/src/main/java/com/wardrumstudios/utils/: WarBase.java  WarGamepad.java  WarMedia.java
app/src/main/java/ro/samp/mobile/: App.java  FileLogger.java  GTASA.java  MainActivity.java  SAMP.java  SAMPActivity.java  SAMPLauncher.java  SAMPWrapper.java  SampLauncher.java  ServerConfig.java  ServerConfig.java.bak
app/src/main/java/ro/samp/mobile/launcher/other/: CustomEditText.java  CustomRecyclerView.java  Lists.java  UnZipCallback.java  Util.java
app/src/main/java/ro/samp/mobile/other/: CustomEditText.java  CustomRecyclerView.java  Lists.java  UnZipCallback.java  Util.java
app/src/main/java/ro/samp/mobile/ui/: AttachEdit.java  CustomKeyboard.java  HudManager.java  LoadingScreen.java  SeekArc.java
app/src/main/java/ro/samp/mobile/ui/dialog/: DialogAdapter.java  DialogManager.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
test/: settings.gradle.kts
test/app/: build.gradle.kts
